src/main/java/com/example/error/ResourceNotFoundException.java
package com.example.error;

/**
 * 要求されたリソースが存在しない場合のドメイン例外。
 */
public class ResourceNotFoundException extends RuntimeException {
}
